--- a/public/locales/vi/translation.json
+++ b/public/locales/vi/translation.json
@@ -27,7 +27,7 @@
     "myBirthday": "24.05.1997",
     "gender": "Giới tính:",
     "myGender": "Nam",
-    "email": "Thư điện tử:",
+    "email": "Email:",
     "myEmail": "kimthanhdat0510@gmail.com",
     "github": "Github:",
     "myGithub": "github.com/Thanhdat013",
@@ -124,8 +124,8 @@
       "feature_3": "Xem trước các thông tin, trailer của phim và thêm bộ phim vào danh sách phim của mình.",
       "feature_4": "Thanh toán, cập nhật và hủy chế độ thành viên với phườn thức thanh toán Stripe.",
       "feature_5": "Responsive: hỗ trợ trên nhiều màn hình.",
-      "frontend": "Next.Js (TypeScript), Tailwind, Material UI v5.",
-      "backend": "Firebase, API from developer.themoviedb.org. ",
+      "frontend": "Next.Js (TypeScript), Tailwind.",
+      "backend": "Firebase, API from developer.themoviedb.org.",
       "role": "Development.",
       "demo": "https://netflix-ts-liart.vercel.app",
       "github": "https://github.com/Thanhdat013/Netflix-ts"
@@ -136,8 +136,8 @@
     "heading": "Liên hệ ",
     "title": "Liên hệ với mình",
     "linkedin": "Linkedin:",
-    "myLinkedin": "www.linkedin.com/in/thanhdat13",
-    "email": "Thư điện tử:",
+    "myLinkedin": "linkedin.com/in/thanhdat13",
+    "email": "Email:",
     "myEmail": "kimthanhdat0510@gmail.com",
     "phone": "Điện thoại:",
     "myPhone": "+84 338 575 296",
