--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -124,8 +124,8 @@
       "feature_3": "Preview movie information, trailers, add movies to your list.",
       "feature_4": "Pay, update, and cancel memberships with Stripe.",
       "feature_5": "Responsive: support on multiple screens.",
-      "frontend": "Next.Js (TypeScript), Tailwind, Material UI v5.",
-      "backend": "Firebase, API from developer.themoviedb.org. ",
+      "frontend": "Next.Js (TypeScript), Tailwind.",
+      "backend": "Next.Js (TypeScript), Tailwind, Material UI v5.",
       "role": "Development.",
       "demo": "https://netflix-ts-liart.vercel.app",
       "github": "https://github.com/Thanhdat013/Netflix-ts"
@@ -136,7 +136,7 @@
     "heading": "Contact",
     "title": "Contact Me",
     "linkedin": "Linkedin:",
-    "myLinkedin": "www.linkedin.com/in/thanhdat13",
+    "myLinkedin": "linkedin.com/in/thanhdat13",
     "email": "Email:",
     "myEmail": "kimthanhdat0510@gmail.com",
     "phone": "Phone:",
