--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -26,7 +26,7 @@
     "birthday": "Birthday:",
     "myBirthday": "24.05.1997",
     "gender": "Gender:",
-    "myGender": "Male:",
+    "myGender": "Male",
     "email": "Email:",
     "myEmail": "kimthanhdat0510@gmail.com",
     "github": "Github:",
