replace link demo project4

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -127,7 +127,7 @@
       "frontend": "Next.Js (TypeScript), Tailwind.",
       "backend": "Firebase, API from developer.themoviedb.org.",
       "role": "Development.",
-      "demo": "https://netflix-ts-liart.vercel.app",
+      "demo": "https://netflix-ts-l9op.vercel.app/",
       "github": "https://github.com/Thanhdat013/Netflix-ts"
     }
   },
